fix: front page squishy images

--- a/assets/styles/src/base/_globals.scss
+++ b/assets/styles/src/base/_globals.scss
@@ -70,6 +70,7 @@ img {
   max-width: 100%;
   height: auto;
   border-radius: var(--border-radius-lg);
+  object-fit: cover;
 }
 
 .bg-image {
